添加BFC和完成50%Grid文档

--- a/source/_posts/选择器与盒子模型.md
+++ b/source/_posts/选择器与盒子模型.md
@@ -1,5 +1,5 @@
 ---
-title: css基础
+title: 选择器与盒子模型
 date: 2018-06-27 00:06:00
 tags: css
 ---
@@ -80,7 +80,7 @@ tags: css
 ## 继承
 子元素会默认继承父节点的字体相关的一些属性，如 font-family 和 color
 
-#### 控制继承
+### 控制继承
 CSS为处理继承提供的通用属性，可以让元素继承或者不继承父元素的属性
 * **inherit** 继承父元素属性， 如：width: inherit;继承父元素的宽度
 * **initial** 设置成浏览器的默认值
